Fix icon text alignment

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -360,4 +360,9 @@ body {
     }
   }
 
+  .radio-icon-label {
+    display: flex;
+    align-items: center;
+  }
+
 }
